# nexum

./: .gitignore  CLAUDE.md  NEXUM_CLARITY_FIX_PROMPT.md  NEXUM_WEB_REDESIGN_PROMPT.md  PACT_SESSION_3.md  README.md  SESSION_LOG.md  batch_summary.txt  pyproject.toml  railpack.toml  railway.json  requirements.txt
.github/actions/nexum-scan/: README.md  action.yml
.github/workflows/: ci.yml  nexum-self-scan.yml
data/: findings_log.jsonl
examples/: langgraph_agent_example.py
examples/manifests/: safe_api_manifest.json  stripe_manifest.json
nexum/: cli.py
nexum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nexum/agent/: __init__.py  triage.py
nexum/core/: baseline.py  engine.py  ingestor.py  scorer.py
nexum/core/formatters/: __init__.py  sarif.py
nexum/core/rules/: auth_leakage.py  base.py  destructive_ambiguity.py  idempotency.py  schema_volatility.py  unbounded_scope.py
nexum/integrations/: __init__.py  langgraph_guardrail.py
nexum/manifest/: generator.py
nexum/report/: pdf_generator.py
nexum/tests/: test_baseline.py  test_cli.py  test_guardrail.py  test_manifest.py  test_pdf_triage.py  test_rules.py  test_sarif.py  test_scorer.py  test_triage.py  test_validator.py  test_web.py
nexum/tests/fixtures/: sample_mcp.json  sample_openapi.yaml
nexum/validator/: __init__.py  angles.py  known_fps.py  reports.py
pact/: cli.py
pact.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pact/core/: engine.py  ingestor.py
pact/core/rules/: auth_leakage.py  base.py  destructive_ambiguity.py  idempotency.py  schema_volatility.py  unbounded_scope.py
pact/manifest/: generator.py
pact/report/: pdf_generator.py
pact/tests/: test_manifest.py  test_rules.py  test_scorer.py
scripts/: batch_scan.sh  batch_scan_extended.sh  generate_registry.py
web/: app.py
web/static/: index.html  registry.html  registry_data.json
(+4 files in other folders)
