[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pact"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pyyaml", "pydantic>=2", "typer", "reportlab", "pytest"]

[project.scripts]
pact = "pact.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["pact/tests"]


